--- a/SmartEatDemo/app/src/main/res/values/strings.xml
+++ b/SmartEatDemo/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SmartEatDemo</string>
-    <string name="logo_description">what</string>
+    <string name="logo_description">img error</string>
 
     <string name="continue_text">Продолжить</string>
 
