--- a/SmartEatDemo/app/src/main/res/values/strings.xml
+++ b/SmartEatDemo/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="is_account">Есть аккаунт?</string>
     <string name="password_confirmation">Подтверждение пароля</string>
     <string name="telephone_number">Номер телефона</string>
-    <string name="agreeing_terms">Я прочитал(-а) и принимаю условия предоставлния услуг</string>
+    <string name="agreeing_terms">Я прочитал(-а) и принимаю условия предоставления услуг</string>
 
     <!--email_frame-->
     <string name="email_field">Email</string>
@@ -72,7 +72,7 @@
 
     <!--physical_activity_info_sheet-->
     <string name="levels_of_physical_activity">Уровни физической активности</string>
-    <string name="physical_activity_info">- Сидячий (малоподвижный)\n\n- Небольшая активность (легкие упражнения 1-3 дня в неделю)\n\n- Умеренная активность (умеренные упражнения 3-5 дней в неделю)\n\n- Высокая активность (интенсивные упражнения 6-7 дней в неделю)\n\n- Очень высокая активность (физическая работа или тренировки дважды в день)</string>
+    <string name="physical_activity_info">- Очень низкий (малоподвижный)\n\n- Низкий (легкие упражнения 1-3 дня в неделю)\n\n- Умеренный (умеренные упражнения 3-5 дней в неделю)\n\n- Высокий (интенсивные упражнения 6-7 дней в неделю)\n\n- Очень высокий (физическая работа или тренировки дважды в день)</string>
 
 
     <!--diary-->
